--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,8 +39,8 @@ jobs:
           host: ${{secrets.SSH_HOST}}
           key: ${{secrets.SSH_KEY}}
           username: ${{secrets.SSH_USERNAME}}
-
           script: |
+            echo "running scripts"
             cd portfolio/html/myportfolio
             git pull
             npm run build
