--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,11 +34,15 @@ jobs:
     needs: [build]
     steps:
       - name: Deploy NodeJs app
+        env:
+          SSH_HOST: ${{secrets.SSH_HOST}}
+          SSH_KEY: ${{secrets.SSH_KEY}}
+          SSH_USER: ${{secrets.SSH_USERNAME}}
         uses: appleboy/ssh-action@v0.1.4
         with:
-          host: ${{secrets.SSH_HOST}}
-          key: ${{secrets.SSH_KEY}}
-          username: ${{secrets.SSH_USERNAME}}
+          host: ${{env.SSH_HOST}}
+          key: ${{env.SSH_KEY}}
+          username: ${{env.SSH_USER}}
           port: 22
           script: |
             echo "running scripts"
