--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,6 +32,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
+    run: echo '$secrets.SSH_HOST'
     steps:
       - name: Deploy NodeJs app
         env:
@@ -39,7 +40,7 @@ jobs:
           SSH_KEY: ${{secrets.SSH_KEY}}
           SSH_USER: ${{secrets.SSH_USERNAME}}
         uses: appleboy/ssh-action@v0.1.4
-        run: echo '$SSH_HOST'
+        
         with:
           host: ${{env.SSH_HOST}}
           key: ${{env.SSH_KEY}}
