--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,21 +32,14 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
-    run: echo '$secrets.SSH_HOST'
     steps:
       - name: Deploy NodeJs app
-        env:
-          SSH_HOST: ${{secrets.SSH_HOST}}
-          SSH_KEY: ${{secrets.SSH_KEY}}
-          SSH_USER: ${{secrets.SSH_USERNAME}}
         uses: appleboy/ssh-action@v0.1.4
-        
         with:
-          host: ${{env.SSH_HOST}}
-          key: ${{env.SSH_KEY}}
-          username: ${{env.SSH_USER}}
+          host: ${{ secrets.SSH_HOST }}
+          key: ${{ secrets.SSH_KEY }}
+          username: ${{ secrets.SSH_USERNAME }}
           port: 22
-          
           script: |
             echo "running scripts"
             cd portfolio/html/myportfolio
