--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,16 +33,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build]
     steps:
-      - name: Deploy NodeJs app
+      - name: Deploy NodeJs app 
         uses: appleboy/ssh-action@v0.1.4
         with:
           host: ${{ secrets.SSH_HOST }}
           key: ${{ secrets.SSH_KEY }}
           username: ${{ secrets.SSH_USERNAME }}
+          passphrase: ""
           port: 22
           
           script: |
-            echo "running scripts"
-            cd portfolio/html/myportfolio
-            git pull
-            npm run build
+            whoami
+            ls -al
