--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,22 +26,24 @@ jobs:
       #with:
         #node-version: ${{ matrix.node-version }}
         #cache: 'npm'
-    #- run: npm ci
-    #- run: npm run build
+    - run: npm ci
+    - run: npm run build
   
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
     steps:
       - name: Deploy NodeJs app 
-        uses: appleboy/ssh-action@v0.1.4
+        uses: appleboy/ssh-action@v0.1.8
         with:
           host: ${{ secrets.SSH_HOST }}
-          key: ${{ secrets.SSH_KEY }}
           username: ${{ secrets.SSH_USERNAME }}
-          passphrase: ""
+          key: ${{ secrets.SSH_KEY }}
           port: 22
-          
+          passphrase: ""
           script: |
-            whoami
-            ls -al
+            echo "running scripts"
+            cd portfolio/html/myportfolio
+            git pull
+            npm ci
+            npm run build
