--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,11 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "staging" ]
+    branches:
+      - staging
   pull_request:
-    branches: [ "staging" ]
+    branches:
+      - staging
 
 jobs:
   build:
